2014-11-24  Holger Seelig  <holger.seelig@yahoo.de>

	* ColorPerVertexEditor.h:
	* ColorPerVertexEditor.cpp: 

2014-11-23  Holger Seelig  <holger.seelig@yahoo.de>

	* TextureCoordinateEditor.cpp: 

2014-11-23  Holger Seelig  <holger.seelig@yahoo.de>

	* ColorPerVertexEditor.cpp:
	* TextureCoordinateEditor.cpp: 

2014-11-23  Holger Seelig  <holger.seelig@yahoo.de>

	* TextureCoordinateEditor.cpp: 

2014-11-23  Holger Seelig  <holger.seelig@yahoo.de>

	* TextureCoordinateEditor.cpp: 

2014-11-23  Holger Seelig  <holger.seelig@yahoo.de>

	* TextureCoordinateEditor.cpp: 

2014-11-23  Holger Seelig  <holger.seelig@yahoo.de>

	* TextureCoordinateEditor.h:
	* TextureCoordinateEditor.cpp: 

2014-11-23  Holger Seelig  <holger.seelig@yahoo.de>

	* TextureCoordinateEditor.xml:
	* TextureCoordinateEditor.h:
	* TextureCoordinateEditor.cpp: 

2014-11-23  Holger Seelig  <holger.seelig@yahoo.de>

	* TextureCoordinateEditor.h:
	* TextureCoordinateEditor.cpp: 

2014-11-23  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.xml:
	* SplitPoint.svg:
	* MergePoints.svg:
	* TextureCoordinateEditor.xml:
	* X3DTextureCoordinateEditorInterface.h:
	* X3DTextureCoordinateEditorInterface.cpp:
	* TextureCoordinateEditor.h:
	* TextureCoordinateEditor.cpp: 

2014-11-23  Holger Seelig  <holger.seelig@yahoo.de>

	* TextureCoordinateEditor.xml:
	* TextureCoordinateEditor.h:
	* TextureCoordinateEditor.cpp: 

2014-11-22  Holger Seelig  <holger.seelig@yahoo.de>

	* TextureCoordinateEditor.cpp: 

2014-11-22  Holger Seelig  <holger.seelig@yahoo.de>

	* TextureCoordinateEditor.xml:
	* TextureCoordinateEditor.h:
	* TextureCoordinateEditor.cpp: 

2014-11-22  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DUserInterface.cpp:
	* TextureCoordinateEditor.xml:
	* TextureCoordinateEditor.h:
	* TextureCoordinateEditor.cpp: 

2014-11-22  Holger Seelig  <holger.seelig@yahoo.de>

	* TextureCoordinateEditorLeftPreview.x3dv: 

2014-11-22  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.xml: